--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/less@4.2.0/dist/less.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ace.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ext-language_tools.min.js"></script>
     <style>
       :root {
-        --bg-primary: #e9e9e9;
+        --bg-primary: #e9eaea;
         --bg-secondary: #ffffff;
-        --bg-tertiary: #fcfcfc;
         --text-primary: #212529;
         --text-secondary: #6c757d;
         --border-color: #dee2e6;
@@ -18,9 +18,8 @@
       }
 
       [data-theme="dark"] {
-        --bg-primary: #393939;
+        --bg-primary: #343d3f;
         --bg-secondary: #1e1e1e;
-        --bg-tertiary: #1d1d1d;
         --text-primary: #e9ecef;
         --text-secondary: #adb5bd;
         --border-color: #444444;
@@ -49,28 +48,22 @@
         padding: 0.5rem;
         background-color: var(--bg-primary);
 
-        .content-code {
-          flex: 1;
-          background: var(--bg-tertiary);
-          border-radius: 1rem;
-        }
-
         .content-data {
-          flex: 1;
+          flex: 4;
           display: flex;
           flex-direction: column;
           gap: 0.5rem;
 
           .content-input {
             flex: 1;
-            background: var(--bg-tertiary);
-            border-radius: 1rem;
+            background: var(--bg-secondary);
+            border-radius: 0.75rem;
           }
 
           .content-output {
             flex: 3;
-            background: var(--bg-tertiary);
-            border-radius: 1rem;
+            background: var(--bg-secondary);
+            border-radius: 0.75rem;
           }
         }
       }
@@ -87,35 +80,77 @@
         }
       }
 
-      .ace-editor-container {
-        height: 100%;
-        width: 100%;
+      .content-code {
+        flex: 5;
+        border-radius: 0.75rem;
+        padding: 0.75rem 0 0.75rem 0;
+        background-color: var(--bg-secondary);
+
+        .ace-editor-container {
+          height: 100%;
+          width: 100%;
+        }
+
+        .ace_editor {
+          background-color: var(--bg-secondary) !important;
+          color: var(--text-primary) !important;
+          overflow: hidden;
+        }
+
+        .ace_gutter {
+          background-color: var(--bg-secondary) !important;
+          color: var(--text-secondary) !important;
+        }
+
+        .ace_gutter-cell {
+          color: var(--text-secondary) !important;
+        }
+
+        .ace_cursor {
+          color: var(--text-primary) !important;
+        }
+
+        .ace_selection {
+          background-color: rgba(0, 0, 0, 0.15) !important;
+        }
+
+        .ace_scrollbar {
+          width: 0.5rem;
+
+          &::-webkit-scrollbar {
+            width: 0.5rem;
+            height: 0.5rem;
+          }
+
+          &::-webkit-scrollbar-track {
+            background-color: transparent;
+          }
+
+          &::-webkit-scrollbar-thumb {
+            background-color: rgba(0, 0, 0, 0.2);
+            border-radius: 0.25rem;
+
+            &:hover {
+              background-color: rgba(0, 0, 0, 0.3);
+            }
+          }
+        }
       }
 
-      .ace_editor {
-        background-color: var(--bg-secondary) !important;
-        color: var(--text-primary) !important;
-      }
+      [data-theme="dark"] .content-code {
+        .ace_selection {
+          background-color: rgba(255, 255, 255, 0.15) !important;
+        }
 
-      .ace_gutter {
-        background-color: var(--bg-tertiary) !important;
-        color: var(--text-secondary) !important;
-      }
+        .ace_scrollbar {
+          &::-webkit-scrollbar-thumb {
+            background-color: rgba(255, 255, 255, 0.2);
 
-      .ace_gutter-cell {
-        color: var(--text-secondary) !important;
-      }
-
-      .ace_cursor {
-        color: var(--text-primary) !important;
-      }
-
-      .ace_selection {
-        background-color: rgba(0, 0, 0, 0.15) !important;
-      }
-
-      [data-theme="dark"] .ace_selection {
-        background-color: rgba(255, 255, 255, 0.15) !important;
+            &:hover {
+              background-color: rgba(255, 255, 255, 0.3);
+            }
+          }
+        }
       }
     </style>
   </head>
@@ -123,7 +158,6 @@
     <div class="container">
       <!-- 代码编写区 -->
       <div class="content-code"></div>
-
       <div class="content-data">
         <!-- 数据输入区 -->
         <div class="content-input"></div>
@@ -197,9 +231,7 @@
   </script>
 
   <script>
-    /**
-     * Ace编辑器管理
-     */
+    // Ace编辑器管理
     class CodeEditor {
       constructor() {
         this.container = document.querySelector(".content-code");
@@ -214,6 +246,8 @@
         this.container.appendChild(editorDiv);
 
         this.editor = ace.edit(editorDiv);
+        ace.require("ace/ext/language_tools");
+        
         this.editor.setTheme("ace/theme/chrome");
         this.editor.session.setMode("ace/mode/c_cpp");
         this.editor.setOptions({
