【新增】编辑器：实现工具标题栏

--- a/index.html
+++ b/index.html
@@ -1,52 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/less@4.2.0/dist/less.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ace.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ext-language_tools.min.js"></script>
-    <style>
-      :root {
-        --bg-primary: #e9eaea;
-        --bg-secondary: #ffffff;
-        --text-primary: #212529;
-        --text-secondary: #6c757d;
-        --border-color: #dee2e6;
-        --shadow-color: rgba(0, 0, 0, 0.1);
-      }
 
-      [data-theme="dark"] {
-        --bg-primary: #343d3f;
-        --bg-secondary: #1e1e1e;
-        --text-primary: #e9ecef;
-        --text-secondary: #adb5bd;
-        --border-color: #444444;
-        --shadow-color: rgba(0, 0, 0, 0.3);
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <script src="https://cdn.jsdelivr.net/npm/less@4.2.0/dist/less.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ace.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.32.2/ext-language_tools.min.js"></script>
+  <style>
+    :root {
+      --bg-primary: #e9eaea;
+      --bg-secondary: #ffffff;
+      --text-primary: #212529;
+      --text-secondary: #6c757d;
+      --border-color: #dee2e6;
+      --shadow-color: rgba(0, 0, 0, 0.1);
+    }
 
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        transition: background-color 0.3s, color 0.3s, border-color 0.3s;
-      }
+    [data-theme="dark"] {
+      --bg-primary: #343d3f;
+      --bg-secondary: #1e1e1e;
+      --text-primary: #e9ecef;
+      --text-secondary: #adb5bd;
+      --border-color: #444444;
+      --shadow-color: rgba(0, 0, 0, 0.3);
+    }
 
-      body {
-        width: 100vw;
-        height: 100vh;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        color: var(--text-primary);
-      }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+    }
 
-      .container {
+    body {
+      width: 100vw;
+      height: 100vh;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      color: var(--text-primary);
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      width: 100%;
+      height: 100%;
+      padding: 0.5rem;
+      background-color: var(--bg-primary);
+
+      .title {
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 2rem;
+        padding: 0 1rem 0 1rem;
+
+        .theme-switcher {
+          display: flex;
+          gap: 0.25rem;
+
+          .theme-option {
+            cursor: pointer;
+          }
+        }
+      }
+
+      .content {
+        display: flex;
+        flex-direction: row;
         gap: 0.5rem;
         width: 100%;
         height: 100%;
-        padding: 0.5rem;
-        background-color: var(--bg-primary);
+
+        /* .content-code {
+          见下方
+        } */
 
         .content-data {
           flex: 4;
@@ -56,211 +86,294 @@
 
           .content-input {
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
             background: var(--bg-secondary);
             border-radius: 0.75rem;
+
+            .input-title {
+              padding: 0 1rem;
+              height: 2.25rem;
+              border-bottom: 1px solid var(--border-color);
+              display: flex;
+              align-items: center;
+              gap: 0.25rem;
+              font-size: 0.9rem;
+              font-weight: 500;
+            }
           }
 
           .content-output {
             flex: 3;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
             background: var(--bg-secondary);
             border-radius: 0.75rem;
-          }
-        }
-      }
 
-      .theme-switcher {
-        position: absolute;
-        bottom: 2rem;
-        right: 2rem;
-        display: flex;
-        gap: 0.25rem;
-
-        .theme-option {
-          cursor: pointer;
-        }
-      }
-
-      .content-code {
-        flex: 5;
-        border-radius: 0.75rem;
-        padding: 0.75rem 0 0.75rem 0;
-        background-color: var(--bg-secondary);
-
-        .ace-editor-container {
-          height: 100%;
-          width: 100%;
-        }
-
-        .ace_editor {
-          background-color: var(--bg-secondary) !important;
-          color: var(--text-primary) !important;
-          overflow: hidden;
-        }
-
-        .ace_gutter {
-          background-color: var(--bg-secondary) !important;
-          color: var(--text-secondary) !important;
-        }
-
-        .ace_gutter-cell {
-          color: var(--text-secondary) !important;
-        }
-
-        .ace_cursor {
-          color: var(--text-primary) !important;
-        }
-
-        .ace_selection {
-          background-color: rgba(0, 0, 0, 0.15) !important;
-        }
-
-        .ace_scrollbar {
-          width: 0.5rem;
-
-          &::-webkit-scrollbar {
-            width: 0.5rem;
-            height: 0.5rem;
-          }
-
-          &::-webkit-scrollbar-track {
-            background-color: transparent;
-          }
-
-          &::-webkit-scrollbar-thumb {
-            background-color: rgba(0, 0, 0, 0.2);
-            border-radius: 0.25rem;
-
-            &:hover {
-              background-color: rgba(0, 0, 0, 0.3);
+            .output-title {
+              padding: 0 1rem;
+              height: 2.25rem;
+              border-bottom: 1px solid var(--border-color);
+              display: flex;
+              align-items: center;
+              gap: 0.25rem;
+              font-size: 0.9rem;
+              font-weight: 500;
             }
           }
-        }
-      }
-
-      [data-theme="dark"] .content-code {
-        .ace_selection {
-          background-color: rgba(255, 255, 255, 0.15) !important;
-        }
-
-        .ace_scrollbar {
-          &::-webkit-scrollbar-thumb {
-            background-color: rgba(255, 255, 255, 0.2);
-
-            &:hover {
-              background-color: rgba(255, 255, 255, 0.3);
-            }
-          }
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <!-- 代码编写区 -->
-      <div class="content-code"></div>
-      <div class="content-data">
-        <!-- 数据输入区 -->
-        <div class="content-input"></div>
-        <!-- 编译或执行结果区 -->
-        <div class="content-output"></div>
-      </div>
-    </div>
-
-    <div class="theme-switcher">
-      <div class="theme-option" data-theme="light" title="浅色主题">浅色</div>
-      <div class="theme-option" data-theme="dark" title="深色主题">深色</div>
-      <div class="theme-option" data-theme="auto" title="跟随系统">自动</div>
-    </div>
-  </body>
-
-  <script>
-    // 主题管理
-    class ThemeManager {
-      constructor() {
-        this.currentTheme = localStorage.getItem("theme") || "auto";
-        this.init();
-      }
-
-      init() {
-        this.applyTheme(this.currentTheme);
-
-        document.querySelectorAll(".theme-option").forEach((option) => {
-          option.addEventListener("click", () => {
-            const theme = option.getAttribute("data-theme");
-            this.setTheme(theme);
-          });
-        });
-
-        window
-          .matchMedia("(prefers-color-scheme: dark)")
-          .addEventListener("change", (e) => {
-            if (this.currentTheme === "auto") {
-              this.applyTheme("auto");
-            }
-          });
-      }
-
-      setTheme(theme) {
-        this.currentTheme = theme;
-        localStorage.setItem("theme", theme);
-        this.applyTheme(theme);
-      }
-
-      applyTheme(theme) {
-        document.documentElement.removeAttribute("data-theme");
-
-        if (theme === "auto") {
-          const systemPrefersDark = window.matchMedia(
-            "(prefers-color-scheme: dark)"
-          ).matches;
-          if (systemPrefersDark) {
-            document.documentElement.setAttribute("data-theme", "dark");
-          } else {
-            document.documentElement.setAttribute("data-theme", "light");
-          }
-        } else {
-          document.documentElement.setAttribute("data-theme", theme);
         }
       }
     }
 
-    // 初始化
-    document.addEventListener("DOMContentLoaded", () => {
-      new ThemeManager();
-    });
-  </script>
 
-  <script>
-    // Ace编辑器管理
-    class CodeEditor {
-      constructor() {
-        this.container = document.querySelector(".content-code");
-        this.editor = null;
-        this.init();
-        this.setupThemeSync();
+    .content-code {
+      flex: 5;
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      border-radius: 0.75rem;
+      background-color: var(--bg-secondary);
+
+      .code-title {
+        padding: 0 1rem;
+        height: 2.25rem;
+        border-bottom: 1px solid var(--border-color);
+        display: flex;
+        gap: 0.25rem;
+        align-items: center;
+        font-size: 0.9rem;
+        font-weight: 500;
       }
 
-      init() {
-        const editorDiv = document.createElement("div");
-        editorDiv.className = "ace-editor-container";
-        this.container.appendChild(editorDiv);
+      .ace-editor-container {
+        flex: 1;
+        width: 100%;
+        border-radius: 0 0 0.75rem 0.75rem;
+      }
 
-        this.editor = ace.edit(editorDiv);
-        ace.require("ace/ext/language_tools");
-        
-        this.editor.setTheme("ace/theme/chrome");
-        this.editor.session.setMode("ace/mode/c_cpp");
-        this.editor.setOptions({
-          enableBasicAutocompletion: true,
-          enableLiveAutocompletion: true,
-          enableSnippets: true,
-          fontSize: 14,
-          fontFamily: "Monaco, Courier New, monospace",
-          showLineNumbers: true,
-          showGutter: true,
+      .ace_editor {
+        background-color: var(--bg-secondary) !important;
+        color: var(--text-primary) !important;
+        overflow: hidden;
+      }
+
+      .ace_gutter {
+        background-color: var(--bg-secondary) !important;
+        color: var(--text-secondary) !important;
+      }
+
+      .ace_gutter-cell {
+        color: var(--text-secondary) !important;
+      }
+
+      .ace_cursor {
+        color: var(--text-primary) !important;
+      }
+
+      .ace_selection {
+        background-color: rgba(0, 0, 0, 0.15) !important;
+      }
+
+      .ace_print-margin {
+        background-color: rgba(0, 0, 0, 0);
+      }
+
+      .ace_scrollbar {
+        width: 0.5rem;
+
+        &::-webkit-scrollbar {
+          width: 0.5rem;
+          height: 0.5rem;
+        }
+
+        &::-webkit-scrollbar-track {
+          background-color: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background-color: rgba(0, 0, 0, 0.2);
+          border-radius: 0.25rem;
+
+          &:hover {
+            background-color: rgba(0, 0, 0, 0.3);
+          }
+        }
+      }
+    }
+
+    [data-theme="dark"] .content-code {
+      .ace_selection {
+        background-color: rgba(255, 255, 255, 0.15) !important;
+      }
+
+      .ace_scrollbar {
+        &::-webkit-scrollbar-thumb {
+          background-color: rgba(255, 255, 255, 0.2);
+
+          &:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+          }
+        }
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <div class="title">
+      <div>LonAC Coding Editor</div>
+      <div class="theme-switcher">
+        <div class="theme-option" data-theme="light" title="浅色主题">浅色</div>
+        <div class="theme-option" data-theme="dark" title="深色主题">深色</div>
+        <div class="theme-option" data-theme="auto" title="跟随系统">自动</div>
+      </div>
+    </div>
+
+    <div class="content">
+      <!-- 代码编写区 -->
+      <div class="content-code">
+        <div class="code-title">
+          <svg xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" data-prefix="far"
+            data-icon="code"
+            class="svg-inline--fa fa-code absolute left-1/2 top-1/2 h-[1em] -translate-x-1/2 -translate-y-1/2 align-[-0.125em]"
+            role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" width="18" height="14.4">
+            <path fill="#02B128"
+              d="M399.1 1.1c-12.7-3.9-26.1 3.1-30 15.8l-144 464c-3.9 12.7 3.1 26.1 15.8 30s26.1-3.1 30-15.8l144-464c3.9-12.7-3.1-26.1-15.8-30zm71.4 118.5c-9.1 9.7-8.6 24.9 1.1 33.9L580.9 256 471.6 358.5c-9.7 9.1-10.2 24.3-1.1 33.9s24.3 10.2 33.9 1.1l128-120c4.8-4.5 7.6-10.9 7.6-17.5s-2.7-13-7.6-17.5l-128-120c-9.7-9.1-24.9-8.6-33.9 1.1zm-301 0c-9.1-9.7-24.3-10.2-33.9-1.1l-128 120C2.7 243 0 249.4 0 256s2.7 13 7.6 17.5l128 120c9.7 9.1 24.9 8.6 33.9-1.1s8.6-24.9-1.1-33.9L59.1 256 168.4 153.5c9.7-9.1 10.2-24.3 1.1-33.9z">
+            </path>
+          </svg>
+          <span>代码</span>
+        </div>
+      </div>
+
+      <div class="content-data">
+        <!-- 数据输入区 -->
+        <div class="content-input">
+          <div class="input-title">
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" data-prefix="far"
+              data-icon="square-check"
+              class="svg-inline--fa fa-square-check absolute left-1/2 top-1/2 h-[1em] -translate-x-1/2 -translate-y-1/2 align-[-0.125em]"
+              role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="16" height="18.29">
+              <path fill="#02B128"
+                d="M64 80c-8.8 0-16 7.2-16 16V416c0 8.8 7.2 16 16 16H384c8.8 0 16-7.2 16-16V96c0-8.8-7.2-16-16-16H64zM0 96C0 60.7 28.7 32 64 32H384c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM337 209L209 337c-9.4 9.4-24.6 9.4-33.9 0l-64-64c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l47 47L303 175c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9z">
+              </path>
+            </svg>
+            <span>输入</span>
+          </div>
+        </div>
+        <!-- 编译或执行结果区 -->
+        <div class="content-output">
+          <div class="output-title">
+            <svg xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" data-prefix="far"
+              data-icon="terminal"
+              class="svg-inline--fa fa-terminal absolute left-1/2 top-1/2 h-[1em] -translate-x-1/2 -translate-y-1/2 align-[-0.125em]"
+              role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" width="16" height="14.22">
+              <path fill="#02B128"
+                d="M6.3 72.2c-9-9.8-8.3-24.9 1.4-33.9s24.9-8.3 33.9 1.4l184 200c8.5 9.2 8.5 23.3 0 32.5l-184 200c-9 9.8-24.2 10.4-33.9 1.4s-10.4-24.2-1.4-33.9L175.4 256 6.3 72.2zM248 432H552c13.3 0 24 10.7 24 24s-10.7 24-24 24H248c-13.3 0-24-10.7-24-24s10.7-24 24-24z">
+              </path>
+            </svg>
+            <span>输出</span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
+</body>
+
+<script>
+  // 主题管理
+  class ThemeManager {
+    constructor() {
+      this.currentTheme = localStorage.getItem("theme") || "auto";
+      this.init();
+    }
+
+    init() {
+      this.applyTheme(this.currentTheme);
+
+      document.querySelectorAll(".theme-option").forEach((option) => {
+        option.addEventListener("click", () => {
+          const theme = option.getAttribute("data-theme");
+          this.setTheme(theme);
         });
+      });
 
-        const initialCode = `#include <iostream>
+      window
+        .matchMedia("(prefers-color-scheme: dark)")
+        .addEventListener("change", (e) => {
+          if (this.currentTheme === "auto") {
+            this.applyTheme("auto");
+          }
+        });
+    }
+
+    setTheme(theme) {
+      this.currentTheme = theme;
+      localStorage.setItem("theme", theme);
+      this.applyTheme(theme);
+    }
+
+    applyTheme(theme) {
+      document.documentElement.removeAttribute("data-theme");
+
+      if (theme === "auto") {
+        const systemPrefersDark = window.matchMedia(
+          "(prefers-color-scheme: dark)"
+        ).matches;
+        if (systemPrefersDark) {
+          document.documentElement.setAttribute("data-theme", "dark");
+        } else {
+          document.documentElement.setAttribute("data-theme", "light");
+        }
+      } else {
+        document.documentElement.setAttribute("data-theme", theme);
+      }
+    }
+  }
+
+  // 初始化
+  document.addEventListener("DOMContentLoaded", () => {
+    new ThemeManager();
+  });
+</script>
+
+<script>
+  // Ace编辑器管理
+  class CodeEditor {
+    constructor() {
+      this.container = document.querySelector(".content-code");
+      this.editor = null;
+      this.init();
+      this.setupThemeSync();
+    }
+
+    init() {
+      const editorDiv = document.createElement("div");
+      editorDiv.className = "ace-editor-container";
+      this.container.appendChild(editorDiv);
+
+      this.editor = ace.edit(editorDiv);
+      ace.require("ace/ext/language_tools");
+
+      this.editor.setTheme("ace/theme/chrome");
+      this.editor.session.setMode("ace/mode/c_cpp");
+      this.editor.setOptions({
+        enableBasicAutocompletion: true,
+        enableLiveAutocompletion: true,
+        enableSnippets: true,
+        fontSize: 14,
+        fontFamily: "Monaco, Courier New, monospace",
+        showLineNumbers: true,
+        showGutter: true,
+      });
+
+      const initialCode = `#include <iostream>
 using namespace std;
 
 int main() {
@@ -268,32 +381,33 @@ int main() {
     return 0;
 }`;
 
-        this.editor.setValue(initialCode);
-        this.editor.clearSelection();
-      }
-
-      setupThemeSync() {
-        const observer = new MutationObserver(() => {
-          this.updateEditorTheme();
-        });
-
-        observer.observe(document.documentElement, {
-          attributes: true,
-          attributeFilter: ["data-theme"],
-        });
-      }
-
-      updateEditorTheme() {
-        if (!this.editor) return;
-
-        const isDark = document.documentElement.getAttribute("data-theme") === "dark";
-        const theme = isDark ? "ace/theme/tomorrow_night" : "ace/theme/chrome";
-        this.editor.setTheme(theme);
-      }
+      this.editor.setValue(initialCode);
+      this.editor.clearSelection();
     }
 
-    document.addEventListener("DOMContentLoaded", () => {
-      new CodeEditor();
-    });
-  </script>
+    setupThemeSync() {
+      const observer = new MutationObserver(() => {
+        this.updateEditorTheme();
+      });
+
+      observer.observe(document.documentElement, {
+        attributes: true,
+        attributeFilter: ["data-theme"],
+      });
+    }
+
+    updateEditorTheme() {
+      if (!this.editor) return;
+
+      const isDark = document.documentElement.getAttribute("data-theme") === "dark";
+      const theme = isDark ? "ace/theme/tomorrow_night" : "ace/theme/chrome";
+      this.editor.setTheme(theme);
+    }
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    new CodeEditor();
+  });
+</script>
+
 </html>
