【新增】数据输入：实现输入功能，运行逻辑(节流)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     :root {
       --bg-primary: #e9eaea;
       --bg-secondary: #ffffff;
+      --bg-tertiary: #f8f9fa;
       --text-primary: #212529;
       --text-secondary: #6c757d;
       --border-color: #dee2e6;
@@ -21,6 +22,7 @@
     [data-theme="dark"] {
       --bg-primary: #343d3f;
       --bg-secondary: #1e1e1e;
+      --bg-tertiary: #212529;
       --text-primary: #e9ecef;
       --text-secondary: #adb5bd;
       --border-color: #444444;
@@ -88,7 +90,6 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
             background: var(--bg-secondary);
             border-radius: 0.75rem;
 
@@ -102,6 +103,55 @@
               font-size: 0.9rem;
               font-weight: 500;
             }
+
+            .input-form {
+              display: flex;
+              flex-direction: column;
+              /* flex: 1; */
+              gap: 0.5rem;
+              padding: 0.5rem;
+
+              .content-input-textarea {
+                background-color: var(--bg-tertiary);
+                width: 100%;
+                height: 9rem;
+                border-radius: 0.5rem;
+                border: 1px solid var(--border-color);
+                padding: 0.75rem;
+                resize: none;
+                font-family: inherit;
+                color: var(--text-primary);
+                outline: none;
+
+                &::-webkit-scrollbar {
+                  width: 0.5rem;
+                  height: 0.5rem;
+                }
+
+                &::-webkit-scrollbar-track {
+                  background-color: transparent;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                  border-radius: 0.25rem;
+                }
+              }
+
+              .run-button {
+                width: 4.5rem;
+                height: 1.75rem;
+                border-radius: 0.4rem;
+                border: none;
+                background-color: #00b728;
+                color: white;
+                cursor: pointer;
+                display: flex;
+                gap: 0.25rem;
+                align-items: center;
+                justify-content: center;
+              }
+            }
+
           }
 
           .content-output {
@@ -218,6 +268,30 @@
         }
       }
     }
+
+    [data-theme="light"] .content-input {
+      .content-input-textarea {
+        &::-webkit-scrollbar-thumb {
+          background-color: rgba(0, 0, 0, 0.2);
+
+          &:hover {
+            background-color: rgba(0, 0, 0, 0.3);
+          }
+        }
+      }
+    }
+
+    [data-theme="dark"] .content-input {
+      .content-input-textarea {
+        &::-webkit-scrollbar-thumb {
+          background-color: rgba(255, 255, 255, 0.2);
+
+          &:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+          }
+        }
+      }
+    }
   </style>
 </head>
 
@@ -263,6 +337,14 @@
             </svg>
             <span>输入</span>
           </div>
+
+          <form class="input-form" id="inputForm">
+            <textarea class="content-input-textarea" name="inputData" placeholder="请输入数据"></textarea>
+            <button type="submit" class="run-button">
+              <svg xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="play" class="svg-inline--fa fa-play absolute left-1/2 top-1/2 h-[1em] -translate-x-1/2 -translate-y-1/2 align-[-0.125em]" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" width="10" height="13.33"><path fill="#FFFFFF" d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z" fill-opacity="0.6"></path></svg>
+              <span>运行</span>
+            </button>
+          </form>
         </div>
         <!-- 编译或执行结果区 -->
         <div class="content-output">
@@ -406,7 +488,60 @@ int main() {
   }
 
   document.addEventListener("DOMContentLoaded", () => {
-    new CodeEditor();
+    window.codeEditorInstance = new CodeEditor();
+  });
+</script>
+
+<script>
+  /**
+   * 代码运行管理（节流5秒）
+   */
+  class InputFormManager {
+    constructor() {
+      this.form = document.getElementById("inputForm");
+      this.lastSubmitTime = 0;
+      this.throttleDelay = 5000;
+      this.codeEditor = null;
+      this.init();
+    }
+
+    init() {
+      this.form.addEventListener("submit", (e) => this.handleSubmit(e));
+    }
+
+    handleSubmit(e) {
+      e.preventDefault();
+
+      const now = Date.now();
+      if (now - this.lastSubmitTime < this.throttleDelay) {
+        return;
+      }
+
+      this.lastSubmitTime = now;
+      const inputData = new FormData(this.form).get("inputData");
+      const code = this.getEditorCode();
+      this.onSubmit(code, inputData);
+    }
+
+    getEditorCode() {
+      const codeEditor = window.codeEditorInstance;
+      if (codeEditor && codeEditor.editor) {
+        return codeEditor.editor.getValue();
+      }
+      return "";
+    }
+
+    /**
+     * 代码运行回调（待实现）
+     */
+    onSubmit(code, inputData) {
+      console.log("代码:", code);
+      console.log("输入数据:", inputData);
+    }
+  }
+
+  document.addEventListener("DOMContentLoaded", () => {
+    new InputFormManager();
   });
 </script>
 
