--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
             flex: 3;
             display: flex;
             flex-direction: column;
-            gap: 0.5rem;
             background: var(--bg-secondary);
             border-radius: 0.75rem;
 
@@ -171,6 +170,47 @@
               gap: 0.25rem;
               font-size: 0.9rem;
               font-weight: 500;
+            }
+            .output-content-container {
+              width: 100%;
+              height: 100%;
+              padding: 0.5rem;
+            }
+
+            .output-content {
+              width: 100%;
+              height: 100%;
+              padding: 0.75rem;
+              overflow-y: auto;
+              font-family: "Monaco", "Courier New", monospace;
+              font-size: 0.875rem;
+              line-height: 1.5;
+              white-space: pre-wrap;
+              word-break: break-all;
+              border: 1px solid var(--border-color);
+              border-radius: 0.5rem;
+              color: var(--text-primary);
+              background-color: var(--bg-tertiary);
+
+              &.empty {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: var(--text-secondary);
+              }
+
+              &::-webkit-scrollbar {
+                width: 0.5rem;
+                height: 0.5rem;
+              }
+
+              &::-webkit-scrollbar-track {
+                background-color: transparent;
+              }
+
+              &::-webkit-scrollbar-thumb {
+                border-radius: 0.25rem;
+              }
             }
           }
         }
@@ -281,8 +321,32 @@
       }
     }
 
+    [data-theme="light"] .content-output {
+      .output-content {
+        &::-webkit-scrollbar-thumb {
+          background-color: rgba(0, 0, 0, 0.2);
+
+          &:hover {
+            background-color: rgba(0, 0, 0, 0.3);
+          }
+        }
+      }
+    }
+
     [data-theme="dark"] .content-input {
       .content-input-textarea {
+        &::-webkit-scrollbar-thumb {
+          background-color: rgba(255, 255, 255, 0.2);
+
+          &:hover {
+            background-color: rgba(255, 255, 255, 0.3);
+          }
+        }
+      }
+    }
+
+    [data-theme="dark"] .content-output {
+      .output-content {
         &::-webkit-scrollbar-thumb {
           background-color: rgba(255, 255, 255, 0.2);
 
@@ -341,7 +405,14 @@
           <form class="input-form" id="inputForm">
             <textarea class="content-input-textarea" name="inputData" placeholder="请输入数据"></textarea>
             <button type="submit" class="run-button">
-              <svg xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="play" class="svg-inline--fa fa-play absolute left-1/2 top-1/2 h-[1em] -translate-x-1/2 -translate-y-1/2 align-[-0.125em]" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" width="10" height="13.33"><path fill="#FFFFFF" d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z" fill-opacity="0.6"></path></svg>
+              <svg xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" data-prefix="fas"
+                data-icon="play"
+                class="svg-inline--fa fa-play absolute left-1/2 top-1/2 h-[1em] -translate-x-1/2 -translate-y-1/2 align-[-0.125em]"
+                role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" width="10" height="13.33">
+                <path fill="#FFFFFF"
+                  d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"
+                  fill-opacity="0.6"></path>
+              </svg>
               <span>运行</span>
             </button>
           </form>
@@ -358,6 +429,9 @@
               </path>
             </svg>
             <span>输出</span>
+          </div>
+          <div class="output-content-container">
+            <div class="output-content empty" id="outputContent">请运行代码</div>
           </div>
         </div>
       </div>
@@ -499,9 +573,9 @@ int main() {
   class InputFormManager {
     constructor() {
       this.form = document.getElementById("inputForm");
+      this.outputContent = document.getElementById("outputContent");
       this.lastSubmitTime = 0;
       this.throttleDelay = 5000;
-      this.codeEditor = null;
       this.init();
     }
 
@@ -531,12 +605,34 @@ int main() {
       return "";
     }
 
+    setRunning() {
+      this.outputContent.textContent = "正在运行中...";
+      this.outputContent.classList.add("empty");
+    }
+
+    setOutput(text) {
+      this.outputContent.textContent = text;
+      this.outputContent.classList.remove("empty");
+    }
+
+    clearOutput() {
+      this.outputContent.textContent = "请运行代码";
+      this.outputContent.classList.add("empty");
+    }
+
     /**
      * 代码运行回调（待实现）
      */
     onSubmit(code, inputData) {
       console.log("代码:", code);
       console.log("输入数据:", inputData);
+
+      this.setRunning();
+
+      setTimeout(() => {
+        const testOutput = `测试文本\n测试文本:\nHello, Test!\n\n输入数据:\n${inputData || "(无)"}`;
+        this.setOutput(testOutput);
+      }, 1500);
     }
   }
 
